2013-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genGetHbit): removed
	* src/mcs51/main.c (hasExtBitOp): removed GETHBIT
	* src/SDCCast.c (optimizeGetByte, optimizeGetWord): do not use GETYBTE or
	  GETWORD for byte or word sources
	  (createFunction): allow xstack==NULL
	* src/SDCCmem.c (redoStackOffsets): allow xstack==NULL
	* src/SDCCerr.c (W_CONST_TOO_LARGE): fixed format bug
	* src/SDCCerr.h: cosmetics
	* src/SDCCsymt.c (mergeSpec, checkSClass): fixed bug 2068, loss of register
	  storage class

2013-12-29 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/is*.c
	  Revert and redo commit #8912.

2013-12-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (glue): added .optsdcc --all-callee-saves, fixed bug 2090
	* src/SDCCmain.c (preProcess): added -D__SDCC_ALL_CALLEE_SAVES
	* src/SDCCglobl.h: removed xa51 MODEL_PAGE0
	* doc/sdccman.lyx: documented predefined macro

2013-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: copy either sjlj or seh support dll

2013-12-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/abs.c,         device/lib/acosf.c,         device/lib/asincosf.c,
	* device/lib/asinf.c,       device/lib/atan2f.c,        device/lib/atanf.c,
	* device/lib/ceilf.c,       device/lib/cosf.c,          device/lib/coshf.c,
	* device/lib/cotf.c,        device/lib/expf.c,          device/lib/fabsf.c,
	* device/lib/floorf.c,      device/lib/frexpf.c,        device/lib/labs.c,
	* device/lib/ldexpf.c,      device/lib/log10f.c,        device/lib/logf.c,
	* device/lib/modff.c,       device/lib/powf.c,          device/lib/rand.c,
	* device/lib/sincosf.c,     device/lib/sincoshf.c,      device/lib/sinf.c,
	* device/lib/sinhf.c,       device/lib/sqrtf.c,         device/lib/tancotf.c,
	* device/lib/tanf.c,        device/lib/tanhf.c,
	* device/include/math.h: removed const from arguments

	* device/lib/pic14/libm/acosf.c,    device/lib/pic14/libm/asincosf.c,